updated site and README to basic implementation ready to share

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Contact</a></li>
@@ -56,19 +56,27 @@
   <div class="row">
     <div class="col-sm-3">
       <p>@Andrew._.Rangel</p>
-      <img src="https://placehold.it/150x80?text=Andrew" class="img-responsive" style="width:100%" alt="Image">
+       <a href="AndrewRangelProfilePage.html">
+         <img src="https://placehold.it/150x80?text=Andrew" class="img-responsive" style="width:100%" alt="Image">
+      </a>
     </div>
     <div class="col-sm-3">
       <p>Player 2</p>
-      <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+      <a href="ProfilePageTemplate.html">
+        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+      </a>
     </div>
     <div class="col-sm-3">
       <p>Player 3</p>
-      <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+      <a href="ProfilePageTemplate.html">
+        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+      </a>
     </div>
     <div class="col-sm-3">
       <p>Player 4</p>
-      <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+      <a href="ProfilePageTemplate.html">
+        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+      </a>
     </div>
   </div>
 </div><br>
@@ -77,19 +85,27 @@
   <div class="row">
     <div class="col-sm-3">
       <p>Player 5</p>
-      <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+      <a href="ProfilePageTemplate.html">
+        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+      </a>
     </div>
     <div class="col-sm-3">
       <p>Player 6</p>
-      <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+      <a href="ProfilePageTemplate.html">
+        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+      </a>
     </div>
     <div class="col-sm-3">
       <p>Player 7</p>
-      <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+      <a href="ProfilePageTemplate.html">
+        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+      </a>
     </div>
     <div class="col-sm-3">
       <p>Player 8</p>
-      <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+      <a href="ProfilePageTemplate.html">
+        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+      </a>
     </div>
   </div>
 </div><br><br>
