--- a/index.html
+++ b/index.html
@@ -44,25 +44,25 @@
   <div class="row">
     <div class="col-sm-3">
       <p>@Andrew._.Rangel</p>
-       <a href="AndrewRangelProfilePage.html">
+       <a href="./src/profiles/AndrewRangelProfilePage.html">
          <img src="https://placehold.it/150x80?text=Andrew" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3">
       <p>Player 2</p>
-      <a href="ProfilePageTemplate.html">
+      <a href="./src/templates/ProfilePageTemplate.html">
         <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3">
       <p>Player 3</p>
-      <a href="ProfilePageTemplate.html">
+      <a href="./src/templates/ProfilePageTemplate.html">
         <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3">
       <p>Player 4</p>
-      <a href="ProfilePageTemplate.html">
+      <a href="./src/templates/ProfilePageTemplate.html">
         <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
@@ -73,25 +73,25 @@
   <div class="row">
     <div class="col-sm-3">
       <p>Player 5</p>
-      <a href="ProfilePageTemplate.html">
+      <a href="./src/templates/ProfilePageTemplate.html">
         <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3">
       <p>Player 6</p>
-      <a href="ProfilePageTemplate.html">
+      <a href="./src/templates/ProfilePageTemplate.html">
         <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3">
       <p>Player 7</p>
-      <a href="ProfilePageTemplate.html">
+      <a href="./src/templates/ProfilePageTemplate.html">
         <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3">
       <p>Player 8</p>
-      <a href="ProfilePageTemplate.html">
+      <a href="./src/templates/ProfilePageTemplate.html">
         <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
