Created logo- adding to the exisiting navbar.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">We Can Code</a>
+      <a class="navbar-brand logo" href="#">
+        <img
+          src="./src/assets/weCanCodeLogo-sm.png"
+          alt="Open laptop with code written on screen."
+          class="logo-img"
+        />
+        <span class="logo-title">
+          <span class="logo-title-top">&lt;/WeCanCode&gt;</span>
+          <span class="logo-title-bottom">club</span>
+        </span>
+      </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
