Created logo- adding to the exisiting navbar.

--- a/index.html
+++ b/index.html
@@ -1,106 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Placeholder Page</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./src/styles/style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
-<body>
+  <head>
+    <title>Placeholder Page</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="./src/styles/style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  </head>
+  <body>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand logo" href="#">
+            <img
+              src="./src/assets/weCanCodeLogo-sm.png"
+              alt="Open laptop with code written on screen."
+              class="logo-img"
+            />
+            <span class="logo-title">
+              <span class="logo-title-top">&lt;/WeCanCode&gt;</span>
+              <span class="logo-title-bottom">club</span>
+            </span>
+          </a>
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">We Can Code</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+          <button
+            type="button"
+            class="navbar-toggle"
+            data-toggle="collapse"
+            data-target="#myNavbar"
+          >
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-<div class="jumbotron">
-  <div class="container text-center">
-    <h1>A Collaborative Coding Experience</h1>
-    <p>Started by Andrew Rangel</p>
-  </div>
-</div>
+    <div class="jumbotron">
+      <div class="container text-center">
+        <h1>A Collaborative Coding Experience</h1>
+        <p>Started by Andrew Rangel</p>
+      </div>
+    </div>
 
-<div class="container-fluid bg-3 text-center">
-  <h3>Active Contributers</h3><br>
-  <div class="row">
-    <div class="col-sm-3">
-      <p>@Andrew._.Rangel</p>
-       <a href="./src/profiles/AndrewRangelProfilePage.html">
-         <img src="https://placehold.it/150x80?text=Andrew" class="img-responsive" style="width:100%" alt="Image">
-      </a>
+    <div class="container-fluid bg-3 text-center">
+      <h3>Active Contributers</h3>
+      <br />
+      <div class="row">
+        <div class="col-sm-3">
+          <p>@Andrew._.Rangel</p>
+          <a href="./src/profiles/AndrewRangelProfilePage.html">
+            <img
+              src="https://placehold.it/150x80?text=Andrew"
+              class="img-responsive"
+              style="width: 100%"
+              alt="Image"
+            />
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <p>Player 2</p>
+          <a href="./src/templates/ProfilePageTemplate.html">
+            <img
+              src="https://placehold.it/150x80?text=?"
+              class="img-responsive"
+              style="width: 100%"
+              alt="Image"
+            />
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <p>Player 3</p>
+          <a href="./src/templates/ProfilePageTemplate.html">
+            <img
+              src="https://placehold.it/150x80?text=?"
+              class="img-responsive"
+              style="width: 100%"
+              alt="Image"
+            />
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <p>Player 4</p>
+          <a href="./src/templates/ProfilePageTemplate.html">
+            <img
+              src="https://placehold.it/150x80?text=?"
+              class="img-responsive"
+              style="width: 100%"
+              alt="Image"
+            />
+          </a>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-3">
-      <p>Player 2</p>
-      <a href="./src/templates/ProfilePageTemplate.html">
-        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-    <div class="col-sm-3">
-      <p>Player 3</p>
-      <a href="./src/templates/ProfilePageTemplate.html">
-        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-    <div class="col-sm-3">
-      <p>Player 4</p>
-      <a href="./src/templates/ProfilePageTemplate.html">
-        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-  </div>
-</div><br>
+    <br />
 
-<div class="container-fluid bg-3 text-center">
-  <div class="row">
-    <div class="col-sm-3">
-      <p>Player 5</p>
-      <a href="./src/templates/ProfilePageTemplate.html">
-        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
-      </a>
+    <div class="container-fluid bg-3 text-center">
+      <div class="row">
+        <div class="col-sm-3">
+          <p>Player 5</p>
+          <a href="./src/templates/ProfilePageTemplate.html">
+            <img
+              src="https://placehold.it/150x80?text=?"
+              class="img-responsive"
+              style="width: 100%"
+              alt="Image"
+            />
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <p>Player 6</p>
+          <a href="./src/templates/ProfilePageTemplate.html">
+            <img
+              src="https://placehold.it/150x80?text=?"
+              class="img-responsive"
+              style="width: 100%"
+              alt="Image"
+            />
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <p>Player 7</p>
+          <a href="./src/templates/ProfilePageTemplate.html">
+            <img
+              src="https://placehold.it/150x80?text=?"
+              class="img-responsive"
+              style="width: 100%"
+              alt="Image"
+            />
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <p>Player 8</p>
+          <a href="./src/templates/ProfilePageTemplate.html">
+            <img
+              src="https://placehold.it/150x80?text=?"
+              class="img-responsive"
+              style="width: 100%"
+              alt="Image"
+            />
+          </a>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-3">
-      <p>Player 6</p>
-      <a href="./src/templates/ProfilePageTemplate.html">
-        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-    <div class="col-sm-3">
-      <p>Player 7</p>
-      <a href="./src/templates/ProfilePageTemplate.html">
-        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-    <div class="col-sm-3">
-      <p>Player 8</p>
-      <a href="./src/templates/ProfilePageTemplate.html">
-        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
-      </a>
-    </div>
-  </div>
-</div><br><br>
+    <br /><br />
 
-<footer class="container-fluid text-center">
-  <p>TBD</p>
-</footer>
-
-</body>
+    <footer class="container-fluid text-center">
+      <p>TBD</p>
+    </footer>
+  </body>
 </html>
