--- a/src/profiles/AdarshPandeyProfilePage.html
+++ b/src/profiles/AdarshPandeyProfilePage.html
@@ -14,6 +14,7 @@
     <style>
       section{
         font-family: 'Raleway', sans-serif;
+        box-sizing: border-box;
       }
       #name{
         margin: 3.5vh 1.7vw;
@@ -34,14 +35,22 @@
         font-size: medium;
       }
       footer{
-        position: absolute;
+        position: relative;
         bottom: 0;
+        left: 0;
+        display: flex;
+  	    justify-content: center;
+        align-items: center;
         width: 100%;
-        height: 10.5vh;
+        height: 11vh;
         background-color: #121212;
         font-family: 'Raleway', sans-serif;
         color: #eeeeee;
       }
+      @media screen and (min-height: 623px) and (min-width: 768px){
+        footer{
+          position: fixed;
+        }
     </style>
 </head>
 <body>
@@ -87,7 +96,7 @@
 
      <h3 class="title">My hobbies</h3>
      <ul>
-       <li>I really like to read books, currently reading Einstein: His Life and Universe - Walter Isaacson</li>
+       <li>I really like reading books, currently reading Einstein: His Life and Universe - Walter Isaacson</li>
         <li>I love to learn stuff &#128525;</li>
         <li>I also love making friends around the world &#128522;</li>
      </ul>
