--- a/src/profiles/AdarshPandeyProfilePage.html
+++ b/src/profiles/AdarshPandeyProfilePage.html
@@ -5,27 +5,96 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/049c2889d3.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&familydisplay=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo&family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
-      section{
+      body{
+        --background-color: white;
+        --label-bg: var(--text-color);
+        --text-color: black;
+        --black-icons-color: black;
+
+        background-color: var(--background-color);
+        margin: 0;
+        padding: 0;
+        transition: all 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
+      }
+      body.dark{
+        --background-color: rgb(5, 5, 5);
+        --label-bg: deepskyblue;
+        --text-color: white; 
+        --black-icons-color: rgb(223, 223, 223);
+      }
+      .section{
         font-family: 'Raleway', sans-serif;
-        box-sizing: border-box;
+        color: var(--text-color);
       }
       #name{
         margin: 3.5vh 1.7vw;
         font-family: 'Raleway', sans-serif;
-        color: black;
         font-weight: 600;
+      }
+      label{
+        display: flex;
+        position: absolute;
+        align-items: center;
+        justify-content: space-between;
+        top: 12vh;
+        right: 3vw;
+        height: 26px;
+        width: 50px;
+        background-color: var(--label-bg);
+        border-radius: 25px;
+        padding: 5px;
+      }
+      #checkbox{
+        display: none;
+      }
+      #checkbox:checked + label #ball{
+        transform: translateX(24px);
+      }
+      .fa-moon{
+        color: yellow;
+      }
+      .fa-sun{
+        color: #f39c12;
+      }
+      #ball{
+        position: absolute;
+        top: 2px;
+        left: 2px;
+        width: 22px;
+        height: 22px;
+        background-color: #fff;
+        border-radius: 50%;
+        transition: transform 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
+      }
+      .fa-instagram, .fa-linkedin, .fa-github{
+        font-size: 2.2em;
+        margin-left: 0.3vw;
+        transition: all 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
+      }
+      .fa-instagram:hover, .fa-linkedin:hover, .fa-github:hover{
+        transform: scale(1.1, 1.1);
+      }
+      .fa-instagram{
+        margin-left: 1.7vw;
+        color: var(--black-icons-color);
+      }
+      .fa-linkedin{
+        color: dodgerblue;
+      }
+      .fa-github{
+        color: var(--black-icons-color);
       }
       .title{
         margin: 3.5vh 1.7vw;
         font-family: 'Raleway', sans-serif;
-        color: black;
         font-weight: 500;
       }
       p{
@@ -45,12 +114,13 @@
         height: 11vh;
         background-color: #121212;
         font-family: 'Raleway', sans-serif;
-        color: #eeeeee;
+        color: #fff;
       }
       @media screen and (min-height: 623px) and (min-width: 768px){
         footer{
           position: fixed;
         }
+      }
     </style>
 </head>
 <body>
@@ -83,29 +153,49 @@
             </ul>
           </div>
         </div>
-      </nav>
-    <section>
-     <h1 id="name">Adarsh Pandey</h1>
-     <h3 class="title">About Me</h3>
-     <p class="paragraphs">I am a 13 year old self taught frontend web developer in the making. You may know me as cerealnotfound &#128521;</p>    
+    </nav>
+    <section class="section">
+      <h1 id="name">Adarsh Pandey</h1>
+      <input type="checkbox" name="checkbox" id="checkbox" onclick="darkModeToggle()">
+      <label for="checkbox">
+       <i class="fas fa-moon"></i>
+       <i class="fas fa-sun"></i>
+       <div id="ball"></div>
+      </label>
+      <div>
+        <a href="https://www.instagram.com/cerealnotfound/"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/adarsh-pandey-a07779202"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/CerealNotFound"><i class="fab fa-github"></i></a>
+      </div>
+      <h3 class="title">About Me</h3>
+      <p class="paragraphs">I am a 13 year old self taught frontend web developer in the making. You may know me as cerealnotfound <span class="emojis">&#128521;</span></p>    
 
-     <h3 class="title">My skills</h3>
-     <ul>
-        <li>A little bit of CSS along with HTML</li>                                   <li>Never worked in Js but know it for sure</li>
-     </ul>
+      <h3 class="title">My skills</h3>
+      <ul>
+        <li>A little bit of CSS along with HTML</li>                                   
+        <li>Basics of JavaScript</li>
+      </ul>
 
-     <h3 class="title">My hobbies</h3>
-     <ul>
+      <h3 class="title">My hobbies</h3>
+      <ul>
        <li>I really like reading books, currently reading Einstein: His Life and Universe - Walter Isaacson</li>
-        <li>I love to learn stuff &#128525;</li>
-        <li>I also love making friends around the world &#128522;</li>
-     </ul>
+        <li>I love to learn stuff <span class="emojis">&#128525;</span></li>
+        <li>I also love making friends around the world <span class="emojis">&#128522;</span></li>
+      </ul>
 
-     <h3 class="title">What I hope to learn</h3>
-     <p>Web development! I really hope that I learn web developement during this process and get a job as a frontend web developer for now.</p>
+      <h3 class="title">What I hope to learn</h3>
+      <p>Web development! I really hope that I learn web developement during this process and get a job as a frontend web developer for now.</p>
     </section>
     <footer class="container-fluid text-center">
         <p id="footer-paragraph">Thank you for visiting my page!</p>
     </footer>
+
+    
+    <script>
+      const chk = document.querySelector('#checkbox')
+      function darkModeToggle() {
+          document.body.classList.toggle('dark')
+      }
+    </script>
 </body>
 </html>
