--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
     <div class="col-sm-3">
       <p>@Andrew._.Rangel</p>
        <a href="./src/profiles/AndrewRangelProfilePage.html">
-         <img src="https://placehold.it/150x80?text=Andrew" class="img-responsive" style="width:100%" alt="Image">
+         <img src="./src/assets/placeholder-image.png" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3">
       <p>@cerealnotfound</p>
       <a href="./src/profiles/AdarshPandeyProfilePage.html">
-        <img src="./src/assets/anonymousLogo.png" class="img-responsive" style="width:100%" alt="Image">
+        <img src="./src/assets/anonymousLogo.png" class="img-responsive" style="width:100%;" alt="Image">
       </a>
     </div>
     <div class="col-sm-3">
       <p>Player 3</p>
       <a href="./src/templates/ProfilePageTemplate.html">
-        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+        <img src="./src/assets/placeholder-image.png" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3">
       <p>Player 4</p>
       <a href="./src/templates/ProfilePageTemplate.html">
-        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+        <img src="./src/assets/placeholder-image.png" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
   </div>
@@ -84,25 +84,25 @@
     <div class="col-sm-3">
       <p>Player 5</p>
       <a href="./src/templates/ProfilePageTemplate.html">
-        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+        <img src="./src/assets/placeholder-image.png" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3">
       <p>Player 6</p>
       <a href="./src/templates/ProfilePageTemplate.html">
-        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+        <img src="./src/assets/placeholder-image.png" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3">
       <p>Player 7</p>
       <a href="./src/templates/ProfilePageTemplate.html">
-        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+        <img src="./src/assets/placeholder-image.png" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
     <div class="col-sm-3">
       <p>Player 8</p>
       <a href="./src/templates/ProfilePageTemplate.html">
-        <img src="https://placehold.it/150x80?text=?" class="img-responsive" style="width:100%" alt="Image">
+        <img src="./src/assets/placeholder-image.png" class="img-responsive" style="width:100%" alt="Image">
       </a>
     </div>
   </div>
