--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </button>
       <a class="navbar-brand logo" href="#">
         <img
-          src="./src/assets/weCanCodeLogo-sm.png"
+          src="./src/assets/WC3 Logo.svg"
           alt="Open laptop with code written on screen."
           class="logo-img"
         />
