added background and some description

--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
 </nav>
 
 <div class="jumbotron">
-  <div class="container text-center">
-    <h1>A Collaborative Coding Experience</h1>
+  <div class="container text-center hero-bg">
+    <h1 class="hero-headline">A Collaborative<span class="coding-text"> Coding </span>Experience</h1>
+    <p class="hero-decription">A collaborative coding experience from great minds all over the world to opensource project , we are all a beginner who hopes to one day become pros doing what we choose to  love. #A One project that started small but will surely get there..</p>
     <p>Started by Andrew Rangel</p>
   </div>
+  <div class="overlay"></div>
 </div>
 
 <div class="container-fluid bg-3 text-center">
