--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           class="logo-img"
         />
         <span class="logo-title">
-          <span class="logo-title-top">&lt;/WeCanCode&gt;</span>
-          <span class="logo-title-bottom">club</span>
+          <span class="logo-title-top" style="font-family: 'Sedgwick Ave', sans-serif">&lt;/WeCanCode&gt;</span>
+          <span class="logo-title-bottom" style="font-family: 'Sedgwick Ave', sans-serif">club</span>
         </span>
       </a>
     </div>
